- FIX: Fixed issue where regular logged in users weren't able to see public images. - FIX: Fixed new banner image not being set after the current banner image has been deleted. - ADD: Added an endpoint to delete current export jobs. - FIX: Fixed issue where changing user permissions didn't update the album permission cache. -